tests/run/errors/assert_false_err.anv
// @mode: run
// @expect: error
// @contains: assertion failed

fn main() {
    assert(false);
}
